--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>zm21438 新井千夏　</title>
-<!--<link rel="stylesheet" href="mystyle.css"> この行を追加-->
+<title>zm21438 新井千夏</title>
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 
 <h1>リンク</h1>
 <br>
-<a href="2.html#def">別のファイルの名前を付けた場所へリンクします</a>
+<a href="a.html#def">別のファイルの名前を付けた場所へリンクします</a>
 <br>
 <h1>画像</h1>
 <br>
-<a href="2.html">相対パスでリンクします</a><br>
+<a href="a.html">相対パスでリンクします</a><br>
 <!--<a href="https://www.josai.ac.jp/education/management/">絶対パスで城西大学経営学部へリンクします。</a><br>-->
 
 <img src="./image/<!--keiei_small.jpg-->" alt="<!--城西大学経営学部-->"></a>
