--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
 <br>
 <a href="a.html#def">別のファイルの名前を付けた場所へリンクします</a>
 <br>
-<h1>画像</h1>
+<h1>SEKAI NO OWARI</h1>
+  <h2>Fukase</h2>
+  <h2>Nakajin</h2>
+  <h2>Saori</h2>
+  <h2>DJ LOVE</h2>
 <br>
-<a href="a.html">相対パスでリンクします</a><br>
-<!--<a href="https://www.josai.ac.jp/education/management/">絶対パスで城西大学経営学部へリンクします。</a><br>-->
-
-<img src="./image/<!--keiei_small.jpg-->" alt="<!--城西大学経営学部-->"></a>
+<a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
+<br>
+<img src="./image/<!--sekainoowari.jpg-->" alt="<!--SEKAI NO OWARI-->"></a>
