--- a/index.html
+++ b/index.html
@@ -19,4 +19,4 @@
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
-<img src="./image/<!--sekainoowari.jpg-->" alt="<!--SEKAI NO OWARI-->"></a>
+<img src="./image/sekainoowari.jpg" alt="SEKAI NO OWARI"></a>
