--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 <br>
 <h1>SEKAI NO OWARI</h1>
   <h2>Fukase</h2>
-  <img src="./image/fukase.webp" alt="SEKAI NO OWARI"></a>
+  <img src="./image/fukase.jpg" alt="fukase"></a>
   <h2>Nakajin</h2>
-  <img src="./image/nakajin.jpg" alt="SEKAI NO OWARI"></a>
+  <img src="./image/nakajin.jpg" alt="nakajin"></a>
   <h2>Saori</h2>
-  <img src="./image/saori.jpg" alt="SEKAI NO OWARI"></a>
+  <img src="./image/saori.jpg" alt="saori"></a>
   <h2>DJ LOVE</h2>
-  <img src="./image/djlove.jpg" alt="SEKAI NO OWARI"></a>
+  <img src="./image/djlove.jpg" alt="djlove"></a>
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
