--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <a href="a.html#def">別のファイルの名前を付けた場所へリンクします</a>
 <br>
 <h1>SEKAI NO OWARI</h1>
-<img src="./image/sekainoowari.jpg" alt="SEKAI NO OWARI"></a>
+<img src=".image/sekainoowari.jpg" alt="SEKAINOOWARI"></a>
+<br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
 <br>
