--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
 <h1>SEKAI NO OWARI</h1>
-<img src=".image/sekaowa.jpg" alt="SEKAINOOWARI"></a>
+<img src="./image/sekaowa.jpg" alt="SEKAINOOWARI"></a>
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
