--- a/a.html
+++ b/a.html
@@ -3,120 +3,14 @@
 <head><meta charset="UTF-8">
 
   
-<a id="def">楽曲一覧</a>
-  <h6>曲名</h6>
-1　ANTI-HERO　　Fukase・Nelson Babin-Coy　Nakajin
-2  ANTI-HERO  Fukase・Nelson Babin-Coy  Nakajin
-3  Blue Flower  Fukase Fukase
-4  broken bone  FukaseFukase
-5  Death Disco  FukaseNakajin・Fukase
-6  Death Disco  FukaseNakajin・Fukase
-7  Diary  SaoriSaori・Nakajin
-8  Dragon Night  FukaseFukase
-9  Dragon Night  FukaseFukase
-10  Dropout  Fukase & TASFukase
-11  Error  FukaseNakajin・Saori & Fukase
-12  Error  FukaseNakajin・Saori & Fukase
-13  Eve  FukaseNakajin2022-06
-14  family  Saori・FukaseSaori・Nakajin・Fukase2021-07
-15  Fight Music  深瀬慧深瀬慧2012-07
-16  Food  FukaseFukase2019-02
-17  Goodbye  NakajinNakajin2019-02
-18  Habit  FukaseNakajin2022-06
-19  Hey Ho  Saori & FukaseNakajin2019-02
-20  Hey Ho  Saori & FukaseNakajin2016-10
-21  Home  FukaseNakajin2015-07
-22  illusion  深瀬慧藤崎彩織・深瀬慧2012-07
-23  Like a scent  FukaseFukase・Nakajin・Ryuichi Sakamoto2021-07
-24  LOVE SONG  FukaseSaori・Nakajin2019-02
-25  Love the warz  深瀬慧・Nelson Babin-coy深瀬慧・中島真一2012-07
-26  MAGIC  FukaseHAWAIIAN62014-10
-27  Missing  FukaseSaori2019-02
-28  Monsoon NightSaori (Assisted by Nelson Babin-Coy)Nakajin・Fukase2019-02
-29  Mr.HeartacheFukase (Assisted by Nelson Babin-Coy)Adam Young・Nakajin2019-02
-30  Never Ending World  深瀬慧藤崎彩織2012-07
-31  Never Ending World  深瀨慧籐崎彩織2011-08
-32  PLAY  SaoriSaori2015-01
-33  RAIN  Fukase・SaoriNakajin・Fukase・Saori2019-02
-34  RAIN  Fukase・SaoriNakajin・Fukase・Saori2017-07
-35  Re:set  FukaseFukase2019-02
-36  RPG  Saori・FukaseFukase2015-01
-37  RPG  Saori・FukaseFukase2013-05
-38  silent  FukaseNakajin・Fukase2020-12
-39  Sleeping Beauty  Fukase・Tablo・Rock MafiaFukase・Tablo・Rock Mafia　
-40  SOS  SaoriFukase2019-02
-41  SOS  SaoriFukase2015-09
-42  tears  FukaseFukase・Nakajin2021-07
-43  the bell(提供)　　2015-01
-44  The Entrance(提供)　　2012-07
-45  TONIGHT  中島真一中島真一2012-07
-46  umbrella  FukaseFukase & Saori2020-06
-47  Witch  FukaseFukase・Nakajin2019-02
-48  YOKOHAMA blues  FukaseNakajin2019-02
-49  yume  深瀬慧藤崎彩織2012-07
-50  yume  深瀨慧籐崎彩織2011-11
-51  正夢  NakajinNakajin2021-07
-52  夜桜  FukaseNakajin・Fukase2019-02
-53  陽炎  SaoriSaori2021-07
-54  不死鳥  深瀬慧中島真一2012-07
-55  不死鳥  深瀨慧中島真一2011-08
-56  幻の命  深瀬慧藤崎彩織2011-08
-57  向日葵  FukaseNakajin・Fukase2019-02
-58  周波数  SaoriSaori2020-06
-59  眠り姫  深瀬慧深瀬慧2012-07
-60  眠り姫  深瀬慧深瀬慧2012-05
-61  深い森  深瀬慧・Nelson Babin-coy深瀬慧2012-07
-62  蜜の月  FukaseFukase2019-02
-63  エデン  FukaseFukase2019-02
-64  サラバ  SaoriNakajin2023-04
-65  ピエロ  FukaseNakajin・Fukase2015-01
-66  ピエロ  FukaseNakajin・Fukase2014-04
-67  世界平和  深瀬慧深瀬慧2011-08
-68  白昼夢  深瀬慧深瀬慧2011-08
-69  死の魔法  深瀬慧深瀬慧2011-08
-70  花鳥風月  藤崎彩織深瀬慧2012-07
-71  花鳥風月  籐崎彩織深瀨慧2011-08
-72  炎の戦士  中島真一中島真一2012-07
-73  青い太陽  深瀬慧深瀬慧・中島真一2011-08
-74  サザンカ  Fukase・SaoriNakajin・Fukase2019-02
-75  サザンカ  Fukase・SaoriNakajin・Fukase2018-02
-76  天使と悪魔v深瀬慧深瀬慧2012-07
-77  天使と悪魔  深瀬慧深瀬慧2010-11
-78  虹色の戦争  深瀬慧深瀬慧2011-08
-79  ターコイズ  FukaseFukase2023-05
-80  バードマン  Saori・FukaseNakajin・David Sneddon・Kasper Larsen　
-81  プレゼント  SaoriNakajin2015-09
-82  ラフレシア  FukaseNakajin2019-02
-83  千夜一夜物語  SaoriSaori2019-02
-84  銀河街の悪夢  FukaseNakajin2015-01
-85  銀河街の悪夢  FukaseNakajin2014-01
-86  エンドロール  FukaseNakajin2022-02
-87  ファンタジー  深瀬慧深瀬慧2012-07
-88  ファンタジー  深瀬慧深瀬慧2010-11
-89  生物学的幻想曲  深瀬慧深瀬慧2012-07
-90  生物学的幻想曲  深瀬慧深瀬慧2012-05
-91  スターゲイザー  FukaseFukase2019-02
-92  スターゲイザー  FukaseFukase2017-07
-93  蜜の月 -for the film-  FukaseFukase2019-03
-94  アースチャイルド  SaoriNakajin2015-01
-95  アースチャイルド  SaoriNakajin2013-05
-96  イルミネーション  Saori・FukaseSaori・Nakajin2019-02
-97  イルミネーション  Saori・FukaseSaori・Nakajin2018-10
-98  カレイドスコープ  NakajinNakajin2020-12
-99  ドッペルゲンガー  NakajinNakajin2019-02
-100  炎と森のカーニバル  FukaseFukase2015-01
-101  炎と森のカーニバル  FukaseFukase2014-04
-102  すべてが壊れた夜  にFukaseFukase2019-02
-103  インスタントラジオ  深瀬慧深瀬慧・中島真一2011-08
-104  コードレスベイビー  SaoriSaori2020-12
-105  スターライトパレード  深瀬慧中島真一2012-07
-106  スターライトパレード  深瀬慧中島真一2011-11
-107  マーメイドラプソディー  SaoriNakajin2015-01
-108  ムーンライトステーション  FukaseFukase2015-01
-109  スノーマジックファンタジー  FukaseNakajin2015-01
-110  スノーマジックファンタジー  FukaseNakajin2014-01
-111  インスタントラジオ -2011.11.22 at 日本武道館-深瀬慧  深瀬慧・中島真一2012-05
-
-
-</body>
-</html>
+<a id="def">楽曲ランキング</a>
+<h4>眠り姫</h4>
+<h4>RPG</h4>
+<h4>蜜の月 -for the film-</h4>
+<h4>Dragon Night</h4>
+<h4>YOKOHAMA blues</h4>
+<h4>サザンカ</h4>
+<h4>スターライトパレード/h4>
+<h4>RAIN</h4>
+<h4>炎と森のカーニバル</h4>
+<h4>イルミネーション</h4>
