--- a/a.html
+++ b/a.html
@@ -10,7 +10,7 @@
 <h4>Dragon Night</h4>
 <h4>YOKOHAMA blues</h4>
 <h4>サザンカ</h4>
-<h4>スターライトパレード/h4>
+<h4>スターライトパレード</h4>
 <h4>RAIN</h4>
 <h4>炎と森のカーニバル</h4>
 <h4>イルミネーション</h4>
