--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   公式ファンクラブは「S.N.O.W.S」と「R.A.I.N.S」。略称は「セカオワ」。</h2>
 <br>
 <h2>バンド名の由来</h2>
-<h3>バンド名の由来
-「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、絶望し自分の世界が終わったと思ったが、その時に残されていたのが音楽と今の仲間だけだったので、「世界の終わり」から始めてみようというポジティブな意味が込められている。
+<h3>「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、絶望し自分の世界が終わったと思ったが、
+その時に残されていたのが音楽と今の仲間だけだったので、「世界の終わり」から始めてみようというポジティブな意味が込められている。
 2011年のメジャーデビュー時に表記を「世界の終わり」からアルファベット表記に改めた。
 また、2012年にアルバム『ENTERTAINMENT』の発表以降は、DJ LOVE以外のメンバーも本名を伏せている。</h3>
 <br>
