--- a/index.html
+++ b/index.html
@@ -13,33 +13,50 @@
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
-<h3>日本の男女混合4人組バンド。旧称は世界の終わり。
-  2007年結成。所属事務所はTOKYO FANTASY。
-  所属レコード会社はユニバーサルミュージックで、所属レーベルはVirgin Music。
-  公式ファンクラブは「S.N.O.W.S」と「R.A.I.N.S」。略称は「セカオワ」。</h3>
+<h3>日本の男女混合4人組バンド。<br>
+  旧称は「世界の終わり」。<br>
+  2007年結成。<br>
+  所属事務所はTOKYO FANTASY。<br>
+  所属レコード会社はユニバーサルミュージックで、所属レーベルはVirgin Music。<br>
+  公式ファンクラブは「S.N.O.W.S」と「R.A.I.N.S」。<br>
+  略称は「セカオワ」。</h3>
+<br>
 <br>
 <h2>バンド名の由来</h2>
-<h3>「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、絶望し自分の世界が終わったと思ったが、
-その時に残されていたのが音楽と今の仲間だけだったので、「世界の終わり」から始めてみようというポジティブな意味が込められている。
-2011年のメジャーデビュー時に表記を「世界の終わり」からアルファベット表記に改めた。
+<h3>「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、<br>
+  「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、絶望し自分の世界が終わったと思ったが、
+その時に残されていたのが音楽と今の仲間だけだったので、<th class="important">「世界の終わり」</th>から始めてみようというポジティブな意味が込められている。
+2011年のメジャーデビュー時に表記を「世界の終わり」からアルファベット表記に改めた。<br>
 また、2012年にアルバム『ENTERTAINMENT』の発表以降は、DJ LOVE以外のメンバーも本名を伏せている。</h3>
 <br>
   
 <h3>Fukase</h3>
 <img src="./image/fukase.jpg" alt="fukase"></a>
-  <br>
+<h4>本名：深瀬　慧（フカセ　サトシ）</h4>
+<h4>生年月日：10月13日</h4>
+<br>
+<br>
 <h3>Nakajin</h3>
 <img src="./image/nakajin.jpg" alt="nakajin"></a>
-  <br>
+<h4>本名：中島　真一（ナカジマ　シンイチ）</h4>
+<h4>生年月日：10月22日</h4>
+<br>
+<br>
 <h3>Saori</h3>
 <img src="./image/saori.jpg" alt="saori"></a>
+  <h4>本名：藤崎　彩織（フジサキ　サオリ）</h4>
+<h4>生年月日：8月13日</h4>
+<br>
   <br>
 
 <h3>DJ LOVE</h3>
 <img src="./image/love.jpg" alt="djlove"></a>
+<h4>本名：不明（不明）</h4>
+<h4>生年月日：8月23日</h4>
 <br>
+  <br>
   
-<h1>リンク</h1>
+<h2>楽曲一覧</h2>
 <br>
-<a href="a.html#def">楽曲一覧</a>
+<a href="a.html#def">♪</a>
 <br>
