--- a/a.html
+++ b/a.html
@@ -2,10 +2,9 @@
 <html lang="ja">
 <head><meta charset="UTF-8">
 
-  
+<p class="sample3">
 <a id="def">楽曲ランキング</a>
-<div class="box1">
-<p><h4>第1位　　眠り姫</h4>
+<h4>第1位　　眠り姫</h4>
 <h4>第2位　　RPG</h4>
 <h4>第3位　　蜜の月 -for the film-</h4>
 <h4>第4位　　Dragon Night</h4>
@@ -14,5 +13,5 @@
 <h4>第7位　　スターライトパレード</h4>
 <h4>第8位　　RAIN</h4>
 <h4>第9位　　炎と森のカーニバル</h4>
-<h4>第10位　イルミネーション</h4></p>
-</div>
+<h4>第10位　イルミネーション</h4>
+</p>
