--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 
 <h1>SEKAI NO OWARI</h1>
-<img src="./image/sekaowa.jpg" alt="SEKAINOOWARI"></a>
+<img src="./image/sekaowa.jpg" alt="SEKAINOOWARI">
+</a>
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
@@ -24,14 +25,12 @@
 <br>
 <h2>バンド名の由来</h2>
 <h3>「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、<br>
-  「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、<br>
-  絶望し自分の世界が終わったと思ったが、その時に残されていたのが音楽と今の仲間だけだったので、<br>
-  <th class="important">「世界の終わり」</th>
-  から始めてみようというポジティブな意味が込められている。
+「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、<br>
+絶望し自分の世界が終わったと思ったが、その時に残されていたのが音楽と今の仲間だけだったので、「世界の終わり」から始めてみようというポジティブな意味が込められている。<br>
 2011年のメジャーデビュー時に表記を「世界の終わり」からアルファベット表記に改めた。<br>
 また、2012年にアルバム『ENTERTAINMENT』の発表以降は、DJ LOVE以外のメンバーも本名を伏せている。</h3>
 <br>
-  
+<br>
 <h3>Fukase</h3>
 <img src="./image/fukase.jpg" alt="fukase"></a>
 <h4>本名：深瀬　慧（フカセ　サトシ）</h4>
@@ -46,10 +45,10 @@
 <br>
 <h3>Saori</h3>
 <img src="./image/saori.jpg" alt="saori"></a>
-  <h4>本名：藤崎　彩織（フジサキ　サオリ）</h4>
+<h4>本名：藤崎　彩織（フジサキ　サオリ）</h4>
 <h4>生年月日：8月13日</h4>
 <br>
-  <br>
+<br>
 
 <h3>DJ LOVE</h3>
 <img src="./image/love.jpg" alt="djlove"></a>
@@ -60,5 +59,5 @@
   
 <h2>楽曲一覧</h2>
 <br>
-<a href="a.html#def">♪</a>
+<a href="a.html#def">♪♪♪♪♪♪</a>
 <br>
