--- a/a.html
+++ b/a.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head><meta charset="UTF-8">
-  
+<body>
 <a id="def">楽曲ランキング</a>
-  
 <p class="sample3">
 <h4>第1位　　眠り姫</h4>
 <h4>第2位　　RPG</h4>
@@ -16,3 +15,5 @@
 <h4>第9位　　炎と森のカーニバル</h4>
 <h4>第10位　イルミネーション</h4>
 </p>
+</body>
+</html>
