--- a/a.html
+++ b/a.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head><meta charset="UTF-8">
+<title>楽曲ランキング</title>
+</head>
 <body>
+  
 <a id="def">楽曲ランキング</a>
 <p class="sample3">
 <h4>第1位　　眠り姫</h4>
