--- a/a.html
+++ b/a.html
@@ -2,6 +2,7 @@
 <html lang="ja">
 <head><meta charset="UTF-8">
 <title>楽曲ランキング</title>
+<link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
   
