--- a/a.html
+++ b/a.html
@@ -7,7 +7,8 @@
 <body>
   
 <a id="def">楽曲ランキング</a>
-<p class="sample3">
+<div class="box8">
+<p>
 <h4>第1位　　眠り姫</h4>
 <h4>第2位　　RPG</h4>
 <h4>第3位　　蜜の月 -for the film-</h4>
@@ -18,6 +19,6 @@
 <h4>第8位　　RAIN</h4>
 <h4>第9位　　炎と森のカーニバル</h4>
 <h4>第10位　イルミネーション</h4>
-</p>
+</p></div>
 </body>
 </html>
