--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
 <h3>「SEKAI NO OWARI」というバンド名は、初代リーダーであるFukaseが、<br>
 「ADHDなどの障がいによる困難な生活」「閉鎖病棟への入院」「医師になるために勉強した記憶が薬の副作用で消える」などの辛い経験をし、<br>
 絶望し自分の世界が終わったと思ったが、その時に残されていたのが音楽と今の仲間だけだったので、<br>
-<th crass="important">「世界の終わり」</th>
-から始めてみようというポジティブな意味が込められている。<br>
+  「世界の終わり」から始めてみようというポジティブな意味が込められている。<br>
 2011年のメジャーデビュー時に表記を「世界の終わり」からアルファベット表記に改めた。<br>
 また、2012年にアルバム『ENTERTAINMENT』の発表以降は、DJ LOVE以外のメンバーも本名を伏せている。</h3>
 <br>
