--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <h1>--SEKAI NO OWARI--</h1>
 <img src="./image/sekaowa.jpg" alt="SEKAINOOWARI">
-</a>
 <br>
 <a href="https://sekainoowari.jp/">SEKAI NO OWARI</a>
 <br>
@@ -36,25 +35,25 @@
 <br>
 <h2>--メンバー紹介--</h2>
 <h3>[Fukase]</h3>
-<img src="./image/fukase.jpg" alt="fukase"></a>
+<img src="./image/fukase.jpg" alt="fukase">
 <h4>本名：深瀬　慧（フカセ　サトシ）</h4>
 <h4>生年月日：10月13日</h4>
 <br>
 <br>
 <h3>[Nakajin]</h3>
-<img src="./image/nakajin.jpg" alt="nakajin"></a>
+<img src="./image/nakajin.jpg" alt="nakajin">
 <h4>本名：中島　真一（ナカジマ　シンイチ）</h4>
 <h4>生年月日：10月22日</h4>
 <br>
 <br>
 <h3>[Saori]</h3>
-<img src="./image/saori.jpg" alt="saori"></a>
+<img src="./image/saori.jpg" alt="saori">
 <h4>本名：藤崎　彩織（フジサキ　サオリ）</h4>
 <h4>生年月日：8月13日</h4>
 <br>
 <br>
 <h3>[DJ LOVE]</h3>
-<img src="./image/love.jpg" alt="djlove"></a>
+<img src="./image/love.jpg" alt="djlove">
 <h4>本名：不明（不明）</h4>
 <h4>生年月日：8月23日</h4>
 <br>
